# blockchain/docs/user/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "http."
+        "http"
     ],
     "swagger": "2.0",
     "info": {
@@ -295,7 +295,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserCredRequest"
+                            "$ref": "#/definitions/dto.UserCreateCredRequest"
                         }
                     }
                 ],
@@ -532,7 +532,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserCredRequest"
+                            "$ref": "#/definitions/dto.UserUpdateCredRequest"
                         }
                     }
                 ],
@@ -754,7 +754,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserInfoRequest"
+                            "$ref": "#/definitions/dto.UserCreateInfoRequest"
                         }
                     }
                 ],
@@ -991,7 +991,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserInfoRequest"
+                            "$ref": "#/definitions/dto.UserUpdateInfoRequest"
                         }
                     }
                 ],
@@ -1099,7 +1099,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserUpdateRequest"
+                            "$ref": "#/definitions/dto.UserCreateRequest"
                         }
                     }
                 ],
@@ -1567,7 +1567,7 @@
         }
     },
     "definitions": {
-        "dto.UserCredRequest": {
+        "dto.UserCreateCredRequest": {
             "type": "object",
             "required": [
                 "card_num",
@@ -1586,6 +1586,69 @@
                     "type": "string"
                 },
                 "userID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UserCreateInfoRequest": {
+            "type": "object",
+            "required": [
+                "address",
+                "age",
+                "city",
+                "country",
+                "phone",
+                "userID"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "age": {
+                    "type": "integer",
+                    "maximum": 120,
+                    "minimum": 1
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UserCreateRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string",
+                    "default": "user"
+                },
+                "valid": {
+                    "type": "boolean",
+                    "default": false
+                },
+                "wallet": {
                     "type": "string"
                 }
             }
@@ -1631,15 +1694,33 @@
                 }
             }
         },
-        "dto.UserInfoRequest": {
+        "dto.UserUpdateCredRequest": {
+            "type": "object",
+            "required": [
+                "card_num",
+                "cvv",
+                "type"
+            ],
+            "properties": {
+                "card_num": {
+                    "type": "string"
+                },
+                "cvv": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserUpdateInfoRequest": {
             "type": "object",
             "required": [
                 "address",
                 "age",
                 "city",
                 "country",
-                "phone",
-                "userID"
+                "phone"
             ],
             "properties": {
                 "address": {
@@ -1657,9 +1738,6 @@
                     "type": "string"
                 },
                 "phone": {
-                    "type": "string"
-                },
-                "userID": {
                     "type": "string"
                 }
             }
